[bugfix] when filter-popup is visible can now click anywhere and it will disapear

--- a/src/components/css/nav.module.css
+++ b/src/components/css/nav.module.css
@@ -2,7 +2,7 @@
   position: fixed;
   width: 100vw;
   background-color: rgba(255, 255, 255, 0.95);
-  z-index: 1;
+  z-index: 10;
   top: 0;
   /* padding: 1em 0em 0em 0em; */
 }
